--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kadol.broadcastreceiver.MainActivity">
+    android:orientation="vertical"
+    >
 
-    <TextView
-        android:id="@+id/phoneNumber"
+    <Button
+        android:id="@+id/refresh_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Refresh"
+        android:onClick="updateUi"
+        />
 
+
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.kadol.broadcastreceiver.MainActivity">
+
+
+    </ListView>
 
 </LinearLayout>
+
+
